Moved build scripts to scripts/build; added leiningen profiles for running rules and generating id sets
updated the run rules script and build-from-scratch script to use
leiningen