@@ -5,12 +5,12 @@ source $SCRIPT_DIR/ENV.sh
 
 if [ $# -ne 7 ]
 then
-  echo "Usage: MAVEN KB_URL KB_NAME KB_USER KB_PASS KB_DATA_DIR RULETYPE"
+  echo "Usage: LEININGEN KB_URL KB_NAME KB_USER KB_PASS KB_DATA_DIR RULETYPE"
   echo $@
   exit 1
 fi
 
-MAVEN=${1:?}
+LEININGEN=${1:?}
 KB_URL=${2:?}
 KB=${3:?}
 KB_USER=${4:?}
@@ -19,17 +19,12 @@ KB_DATA_DIR=${6:?}
 RULETYPE=${7:?}
 
 OUTPUTDIR=$KB_DATA_DIR/$RULETYPE/
-RULES_RES_DIR=edu/ucdenver/ccp/kabob/build/$RULETYPE/
+RULES_RES_DIR=resources/$RULETYPE/
 
 echo Running rules
 mkdir -p $OUTPUTDIR
-$MAVEN \
-    --debug \
-    --file kabob-build/pom.xml \
-    -Dclojure.vmargs="-d64 -Xmx2G -XX:MaxPermSize=256m" \
-    -Dclojure.mainClass="edu.ucdenver.ccp.kabob.build.run_rules" \
-    -Dclojure.args="$KB_URL $KB $KB_USER $KB_PASS $OUTPUTDIR $RULES_RES_DIR" \
-    clojure:run
+$LEININGEN run-rules "$KB_URL $KB $KB_USER $KB_PASS $OUTPUTDIR $RULES_RES_DIR" 
+
 # Ensure that all subdirectoes implicit in the `RULETYPE` are accessible to
 # later processes.
 find $KB_DATA_DIR -type d -exec chmod 0755 {} \;
